<resources>
    <string name="app_name">Hetwapenvanroosendaal</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_information">Informatie</string>
    <string name="title_subscription">Abonnement</string>
    <string name="spaarkaart">Spaarkaart</string>
    <string name="beermenu">Beermenu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_beer">Bierkaart</string>
    <string name="home">HOME</string>
    <string name="info">INFORMATIE</string>
    <string name="beer">BIERKAART</string>
    <string name="subscription">ABONNEMENT</string>
    <string name="home_description">Je bent altijd welkom in het beste biercafé van West-Brabant.</string>
    <string name="login">LOGIN</string>
    <string name="login_description">Vul de onderstaande gegevens om verder te gaan.</string>
    <string name="beer_description">Van licht en verfrissend tot donker en rijk, er is een bier voor elke smaak en stemming.</string>
    <string name="subscription_description">Sluit vandaag nog een bierabonnement af en geniet van hoge kortingen op onze bieren.</string>
    <string name="logo_wapen">Logo Wapen</string>
    <string name="beer_image">beer_image</string>
    <string name="empty">Empty</string>
    <string name="vaste_gast">VASTE GAST?</string>
    <string name="bottom_notification">Sluit nu je favoriete bierabonnement af bij je favoriete café en geniet elke maand van de beste bieren met onze handige app! Klik hier om direct te beginnen.</string>
    <string name="info_description">Informatie &amp; geschiedenis van Het Wapen uitgelicht.</string>
    <string name="register">REGISTREREN</string>
    <string name="register_description">Vul de onderstaande gegevens om verder te gaan.</string>
    <string name="voornaam">Voornaam</string>
    <string name="achternaam">Achternaam</string>
    <string name="emailadres">Emailadres</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="registreren">Registreren</string>
    <string name="email">Emailadres</string>
    <string name="pass">Wachtwoord</string>
    <string name="log">Login</string>
    <string name="nog_geen_account">Nog geen account?</string>
    <string name="card">SPAARKAART</string>
    <string name="card_description">Laat de QR code scannen aan de bar en krijg een biertje naar keuze mee.</string>
    <string name="logout">Uitloggen</string>
    <string name="title_card">Spaarkaart</string>
    <string name="wel_account">Al een account?</string>
    <string name="loading">loading...</string>
    <string name="abonneren">Abonneren</string>
    <string name="abonnement_afsluiten">Abonnement afsluiten</string>
    <string name="sub_page_photo">sub_page_photo</string>
    <string name="txt_btw">* Prijzen zijn inclusief 21% BTW</string>
    <string name="maandelijks">MAANDELIJKS</string>
    <string name="sluit_ons_bier_abonnement_af_en_ontvang_16_biertjes_voor_een_vaste_lage_prijs">Sluit ons bier abonnement af en ontvang 16 biertjes voor een vaste lage prijs.</string>
    <string name="kwartaal">KWARTAAL</string>
    <string name="sluit_ons_bier_abonnement_per_3_maanden_af_en_ontvang_3_maanden_lang16_biertjes_voor_een_vaste_lage_prijs">Sluit ons bier abonnement per 3 maanden af en ontvang 3 maanden lang 16 biertjes voor een vaste lage prijs.</string>
    <string name="_77">€77</string>
    <string name="_235">€235</string>
    <string name="jaarlijks">JAARLIJKS</string>
    <string name="sluit_ons_bier_abonnement_per_jaar_af_en_ontvang_een_heel_jaar_lang_elke_maand_16_biertjes_voor_een_vaste_lage_prijs">Sluit ons bier abonnement per jaar af en ontvang een heel jaar lang elke maand 16 biertjes voor een vaste lage prijs.</string>
    <string name="_920">€920</string>
    <string name="payment">BETALING</string>
    <string name="paymentDesc">Doorloop de onderstaande stappen om de betaling af te ronden.</string>
</resources>