<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hetwapenvanroosendaal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_beermenu"
        android:name="com.example.hetwapenvanroosendaal.ui.beer.BeerFragment"
        android:label="@string/title_beer"
        tools:layout="@layout/fragment_beer" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.hetwapenvanroosendaal.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_subscription"
        android:name="com.example.hetwapenvanroosendaal.ui.subscription.SubscriptionFragment"
        android:label="@string/title_subscription"
        tools:layout="@layout/fragment_subscription" >

        <action
            android:id="@+id/action_subFragment_to_payFragment"
            app:destination="@id/navigation_payment" />

        <action
            android:id="@+id/action_PaymentFragment_to_CardFragment"
            app:destination="@id/navigation_savingscard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.example.hetwapenvanroosendaal.ui.payment.PaymentFragment"
        android:label="Betaling"
        tools:layout="@layout/fragment_payment" >

        <action
            android:id="@+id/action_PaymentFragment_to_CardFragment"
            app:destination="@id/navigation_savingscard" />

    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.hetwapenvanroosendaal.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_SubFragment"
            app:destination="@id/navigation_subscription" />

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_LoginFragment_to_CardFragment"
            app:destination="@id/navigation_savingscard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_savingscard"
        android:name="com.example.hetwapenvanroosendaal.ui.card.CardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_card">

        <action
            android:id="@+id/action_CardFragment_to_LoginFragment"
            app:destination="@id/navigation_login" />

        <action
            android:id="@+id/action_CardFragment_to_SubscriptionFragment"
            app:destination="@id/navigation_subscription" />
    </fragment>
  
    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.hetwapenvanroosendaal.ui.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />
  
</navigation>