<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".ui.subscription.SubscriptionFragment">

    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewCount,SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/homeHeader"
                layout="@layout/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="184dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/sub_page_photo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/sub_one"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="1.0"
                            tools:ignore="ObsoleteLayoutParam" />

                        <TextView
                            android:id="@+id/txtMonthly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/oswald_bold"
                            android:shadowColor="#000000"
                            android:shadowDx="-2"
                            android:shadowDy="-2"
                            android:shadowRadius="2"
                            android:text="@string/maandelijks"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.177"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/imageView2"
                            app:layout_constraintVertical_bias="0.324" />

                        <TextView
                            android:id="@+id/txtMonthly2"
                            android:layout_width="148dp"
                            android:layout_height="42dp"
                            android:fontFamily="@font/roboto"
                            android:shadowColor="#000000"
                            android:shadowDx="-2"
                            android:shadowDy="-2"
                            android:shadowRadius="2"
                            android:text="@string/sluit_ons_bier_abonnement_af_en_ontvang_16_biertjes_voor_een_vaste_lage_prijs"
                            android:textColor="#FFFFFF"
                            android:textSize="11sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.472"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/imageView2"
                            app:layout_constraintVertical_bias="0.656"
                            tools:ignore="TextSizeCheck" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="183dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/sub_page_photo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/sub_two"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ObsoleteLayoutParam" />

                        <TextView
                            android:id="@+id/txtQuarter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/oswald_bold"
                            android:shadowColor="#000000"
                            android:shadowDx="-2"
                            android:shadowDy="-2"
                            android:shadowRadius="2"
                            android:text="@string/kwartaal"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.145"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/imageView3"
                            app:layout_constraintVertical_bias="0.324" />

                        <TextView
                            android:id="@+id/txtQuarter2"
                            android:layout_width="145dp"
                            android:layout_height="54dp"
                            android:fontFamily="@font/roboto"
                            android:shadowColor="#000000"
                            android:shadowDx="-2"
                            android:shadowDy="-2"
                            android:shadowRadius="2"
                            android:text="@string/sluit_ons_bier_abonnement_per_3_maanden_af_en_ontvang_3_maanden_lang16_biertjes_voor_een_vaste_lage_prijs"
                            android:textColor="#FFFFFF"
                            android:textSize="11sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.421"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/imageView3"
                            app:layout_constraintVertical_bias="0.759"
                            tools:ignore="TextSizeCheck" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/sub_page_photo"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sub_three"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/txtYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald_bold"
                        android:shadowColor="#000000"
                        android:shadowDx="-2"
                        android:shadowDy="-2"
                        android:shadowRadius="2"
                        android:text="JAARLIJKS"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.05"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView4"
                        app:layout_constraintVertical_bias="0.314" />

                    <TextView
                        android:id="@+id/txtYear2"
                        android:layout_width="351dp"
                        android:layout_height="36dp"
                        android:fontFamily="@font/roboto"
                        android:shadowColor="#000000"
                        android:shadowDx="-2"
                        android:shadowDy="-2"
                        android:shadowRadius="2"
                        android:text="Sluit ons bier abonnement per jaar af en ontvang een heel jaar lang elke maand 16 biertjes voor een vaste lage prijs."
                        android:textColor="#FFFFFF"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.444"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView4"
                        app:layout_constraintVertical_bias="0.625"
                        tools:ignore="TextSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBtw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txt_btw"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/subBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abonneren"
                    android:textColor="@color/white"
                    tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />


            </LinearLayout>

            <include
                android:id="@+id/bottomNtf"
                layout="@layout/bottom_ntf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/homeHeader"
                app:layout_constraintVertical_bias="0.863" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>